Issue #10762: Guard against invalid/non-supported format string '%f' on Windows. Patch Santoso Wijaya.